# skillmng

./: .dockerignore  .env.example  .gitignore  CODEX_HANDOFF.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  entrypoint.sh
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_users.py  0002_skills_files_audit.py  0003_skill_versions.py  0004_llm_jobs.py  0005_antcode_metadata.py  0006_llm_applied_at.py  0007_prd5_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: antcode.py  deps.py  files.py  importexport.py  llm.py  me.py  settings_api.py  skills.py  versions.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  llm_job.py  skill.py  skill_file.py  skill_version.py  user.py
backend/app/prompts/: create_skill.md  update_skill.md
backend/app/schemas/: __init__.py  llm.py  skill.py  version.py
backend/app/services/: antcode_client.py  antcode_skill_service.py  audit_service.py  git_service.py  importexport_service.py  llm_job_service.py  (+4 more)
backend/data/: skillmng.sqlite3
backend/skillmng_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  conftest.py  test_antcode_client.py  test_llm_mock.py  test_path_safety.py  test_prd2_features.py  test_prd7.py  test_publish_workflow.py  test_skill_crud.py  test_skill_md_consistency.py  test_skill_md_validator.py  test_smoke.py  test_tenant_isolation.py  test_versions_git_mock.py  test_zip_import_safety.py
(+51 files in other folders)
